# playground

./: .gitignore  LICENSE  playground.cabal  stack.yaml
app/: Main.hs
src/: Compat.hs  Naive.hs  Playground.hs
src/Playground/: Exercises.hs  Policies.hs  Types.hs
