name:                playground
version:             0.1
description:         Playground space
homepage:            https://github.com/brymaven/playground
license:             MIT
license-file:        LICENSE
author:              Brymaven
maintainer:          brymaven@gmail.com
copyright:           2017 Brymaven
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends: base >= 4.7 && < 5
               , aeson
               , bytestring
               , containers
               , cryptonite
               , foundation
               , memory
               , network
               , servant
               , time
  exposed-modules: Playground
  other-modules: Playground.Types

executable playground-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , playground
                     , bytestring
